fix: chatinput overflow (opera mobile)

--- a/src/components/ChatInput/ChatInput.css
+++ b/src/components/ChatInput/ChatInput.css
@@ -4,7 +4,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 15vh;
+  height: 20vh;
 }
 footer .input-field input,
 .buttonWhite {
